--- a/core-sam/deployment_basic.yaml
+++ b/core-sam/deployment_basic.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: solace-agent-mesh-deployment
+  namespace: sam-infra
   labels:
     app: solace-agent-mesh
 spec:
