Added Environment variable for SSO configurations

--- a/secret-example.yaml
+++ b/secret-example.yaml
@@ -38,3 +38,19 @@ data:
   SSL_KEYFILE_PASSWORD: ""
   ENABLE_EMBED_RESOLUTION: "VHJ1ZQ==" # Placeholder: True
   LOGGING_CONFIG_PATH: "Y29uZmlncy9sb2dnaW5nX2NvbmZpZy5pbmk=" # Placeholder: configs/logging_config.ini
+
+  ##SSO configuration related file 
+  AZURE_TENANT_ID: "xxxxxxxxx-xxxxxx-xxxxxxxx-xxxxxxxxxx"
+  AZURE_CLIENT_ID: "xxxxxxxxx-xxxxxx-xxxxxxxx-xxxxxxxxxx"
+  AZURE_CLIENT_SECRET: "xxxxxxxxx-xxxxxx-xxxxxxxx-xxxxxxxxxx"
+  OAUTH2_ENABLED: "true"
+  OAUTH2_LOG_LEVEL: "DEBUG”
+  OAUTH2_DEV_MODE: "true"
+  OAUTH2_HOST: "0.0.0.0"
+  OAUTH2_PORT: "9000"
+  FRONTEND_USE_AUTHORIZATION: "true"
+  FRONTEND_REDIRECT_URL: "http://localhost:8000"
+  FRONTEND_AUTH_LOGIN_URL: "http://localhost:8000/api/v1/auth/login"
+  EXTERNAL_AUTH_SERVICE_URL: "http://localhost:9000"
+  EXTERNAL_AUTH_PROVIDER: "azure"
+  EXTERNAL_AUTH_CALLBACK: "http://localhost:8000/api/v1/auth/callback"
