Changing file for SSO configurations

--- a/core-sam/deployment_basic.yaml
+++ b/core-sam/deployment_basic.yaml
@@ -27,6 +27,8 @@ spec:
         # The arguments now include the 'configs/' path prefix
         args:
         - "configs/main_orchestrator.yaml"
+        - "configs/oauth2_server.yaml"
+        - "configs/oauth2_config.yaml"
         - "configs/webui.yaml"
         envFrom:
         - secretRef:
